--- a/index.html
+++ b/index.html
@@ -43,10 +43,50 @@
       border-radius: 50px;
       font-weight: bold;
       transition: background 0.3s ease;
+      cursor: pointer;
     }
 
     .button:hover {
       background-color: #f1f1f1;
+    }
+
+    /* Modal styles */
+    .modal {
+      display: none;
+      position: fixed;
+      z-index: 10;
+      left: 0;
+      top: 0;
+      width: 100%;
+      height: 100%;
+      background: rgba(0,0,0,0.6);
+      justify-content: center;
+      align-items: center;
+    }
+
+    .modal-content {
+      background: white;
+      color: #333;
+      padding: 30px;
+      border-radius: 10px;
+      text-align: center;
+      max-width: 400px;
+    }
+
+    .modal-content h2 {
+      margin-top: 0;
+      color: #28a745;
+    }
+
+    .close-btn {
+      margin-top: 20px;
+      display: inline-block;
+      background: #28a745;
+      color: white;
+      padding: 10px 20px;
+      border-radius: 30px;
+      cursor: pointer;
+      text-decoration: none;
     }
   </style>
 </head>
@@ -56,7 +96,25 @@
     <p>
       Usamos tecnología de punta y estrategias personalizadas para ayudar a las universidades a conseguir sus futuros estudiantes estrella.
     </p>
-    <a href="#" class="button">¡CONVERSÉMOS!</a>
+    <div class="button" onclick="openModal()">¡CONVERSÉMOS!</div>
   </div>
+
+  <!-- Modal -->
+  <div class="modal" id="contactModal">
+    <div class="modal-content">
+      <h2>Contáctanos</h2>
+      <p>📧 contacto@captamas.cl </p>
+      <a class="close-btn" onclick="closeModal()">Cerrar</a>
+    </div>
+  </div>
+
+  <script>
+    function openModal() {
+      document.getElementById("contactModal").style.display = "flex";
+    }
+    function closeModal() {
+      document.getElementById("contactModal").style.display = "none";
+    }
+  </script>
 </body>
 </html>
