--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <style>
     body {
       margin: 0;
-      font-family: 'Arial', sans-serif;
-      background-color: #28a745; /* Green background */
+      font-family: Arial, sans-serif;
+      background-color: #28a745;
       color: white;
       display: flex;
       justify-content: center;
@@ -59,7 +59,7 @@
       top: 0;
       width: 100%;
       height: 100%;
-      background: rgba(0,0,0,0.6);
+      background: rgba(0, 0, 0, 0.6);
       justify-content: center;
       align-items: center;
     }
@@ -71,6 +71,7 @@
       border-radius: 10px;
       text-align: center;
       max-width: 400px;
+      box-shadow: 0 5px 15px rgba(0,0,0,0.3);
     }
 
     .modal-content h2 {
@@ -103,7 +104,7 @@
   <div class="modal" id="contactModal">
     <div class="modal-content">
       <h2>Contáctanos</h2>
-      <p>📧 contacto@captamas.cl </p>
+      <p>📧 contacto@captamas.cl</p>
       <a class="close-btn" onclick="closeModal()">Cerrar</a>
     </div>
   </div>
